plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/runConfigurations/jvmRun/src/commonMain/kotlin/CommonMain.kt
package commonMain

fun <!LINE_MARKER!>main<!>() {
    println("run: CommonMain")
}
